--- a/collection/collection.tex
+++ b/collection/collection.tex
@@ -13,6 +13,8 @@
 \newcommand{\bj}{\brm{j}}
 \newcommand{\bk}{\brm{k}}
 \newcommand{\be}{\brm{e}}
+\newcommand{\bx}{\brm{x}}
+\newcommand{\br}{\brm{r}}
 \newcommand{\pd}{\partial}
 \setlength{\mathindent}{10pt}
 
@@ -84,7 +86,7 @@
 \setlength{\columnsep}{2pt}
 
 \begin{center}
-    \Large{\underline{数学物理每日默写}} \footnotesize{13FEB2018}
+    \Large{\underline{数学物理每日默写}} \footnotesize{\today}
 \end{center}
 
 \section{高斯函数积分}
@@ -117,6 +119,12 @@
 第二恒等式
 \begin{equation}
     \int_V(\psi\nabla^2\phi-\phi\nabla^2\psi)dV=\oint_S\left(\psi\frac{\pd\phi}{\pd n}-\phi\frac{\pd\psi}{\pd n}\right)dS
+\end{equation}
+
+\section{球壳边界条件的格林函数}
+球壳半径为$a$
+\begin{equation}
+    G(\bx,\bx')=\frac1{|\bx-\bx'|}-\frac{a}{x'\left|\bx-\dfrac{a^2}{x'^2}\bx'\right|}
 \end{equation}
 
 % You can even have references
