spherical harmonic expansion

--- a/collection/collection.tex
+++ b/collection/collection.tex
@@ -127,6 +127,10 @@
     G(\bx,\bx')=\frac1{|\bx-\bx'|}-\frac{a}{x'\left|\bx-\dfrac{a^2}{x'^2}\bx'\right|}
 \end{equation}
 
+\section{球谐展开}
+    \begin{equation}
+        \dfrac{1}{|\bx-\bx'|}=4\pi\sum_{l=0}^{\infty}\sum_{m=-l}^l\dfrac{1}{2l+1}\dfrac{r_<^l}{r_>^{l+1}}Y_{lm}^*(\theta',\phi')Y_{lm}(\theta,\phi)
+    \end{equation}
 % You can even have references
 %\rule{0.3\linewidth}{0.25pt}
 %\scriptsize
